# mscthesis_db

./: .gitignore  README.md  logfile  pyproject.toml
app/: config.py  db.py  model_mixins.py  models.py
notebooks/: example_query.ipynb
scripts/: bootstrap_db.py  sample_data.json
